# moozix

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py  schemas.py
backend/app/auth/: session.py  spotify_oauth.py
backend/app/compatibility/: audio_features.py  embeddings.py  llm_report.py  orchestrator.py  overlap.py
backend/app/profile/: builder.py
backend/app/routers/: auth.py  compare.py  profile.py
backend/app/spotify/: client.py  enrich.py
backend/tests/: conftest.py  test_audio_features.py  test_orchestrator.py  test_overlap.py
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  Pill.module.css  Pill.tsx  TopNav.module.css  TopNav.tsx
frontend/src/hooks/: useAuthStatus.ts
frontend/src/pages/: ComparePage.module.css  ComparePage.tsx  LandingPage.module.css  LandingPage.tsx  MePage.module.css  MePage.tsx  PostLoginPage.module.css  PostLoginPage.tsx
frontend/src/styles/: global.css  tokens.css
